# replayt-otel-span-exporter

./: .aider.chat.history.md  .gitignore  AGENTS.md  CHANGELOG.md  Let me check if the package structure is correct. The `pyproject.toml` specifies  README.md  pyproject.toml
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.cursor/rules/: orchestrator-files.mdc
.cursor/skills/: README.md
.github/workflows/: ci.yml  release.yml
docs/: CI_SPEC.md  COMPATIBILITY.md  DEPENDENCY_AUDIT.md  DESIGN_PRINCIPLES.md  MISSION.md  RECIPE_SPAN_EXPORT_HOOKS_PRODUCTION.md  REPLAYT_ECOSYSTEM_IDEA.md  ROADMAP.md  SPEC_BETA_AND_STABLE_PROMOTION.md  SPEC_EXPORT_TRIAGE_METADATA.md  SPEC_FIRST_ALPHA_RELEASE.md  SPEC_OPENTELEMETRY_DEPENDENCY_POLICY.md  SPEC_OTEL_EXPORTER_SKELETON.md  SPEC_README_QUICK_START.md  SPEC_REFERENCE_DOCUMENTATION.md  SPEC_REPLAYT_INTEGRATION_TESTS.md  SPEC_SCRIPTS_OTEL_PREPARED_DEMO.md  SPEC_SPAN_EXPORT_APPROVAL_UX.md  SPEC_SPAN_EXPORT_FAILURE_HANDLING.md
docs/reference-documentation/: README.md  opentelemetry-python.md  replayt.md
scripts/: README.md  otel_to_prepared_demo.py  verify_published_release.sh
src/replayt_otel_span_exporter/: __init__.py  exporter.py  records.py  redaction.py
tests/: readme_usage_example_snippet.py  test_beta_stable_promotion_docs.py  test_compatibility_contract.py  test_dependencies.py  test_exporter.py  test_init.py  test_readme_integrator_install.py  test_readme_usage_example.py  test_recipe_span_export_hooks_production_docs.py  test_records.py  test_redaction.py  test_reference_documentation.py  test_release_metadata.py  test_release_packaging.py  test_release_workflow_contract.py  test_scripts_otel_prepared_demo.py
tests/integration/: test_opentelemetry_api_usage.py  test_replayt_boundary.py
