[project]
name = "replayt-otel-span-exporter"
version = "0.2.0a1"
description = "OpenTelemetry Span Exporter for Replayt Workflows: Python project using replayt; see docs for scope."
readme = "README.md"
requires-python = ">=3.11"
# OpenTelemetry: PEP 440 lower bounds only — no `<` in runtime specifiers on the 1.x line
# (see tests/test_compatibility_contract.py). pip install -e ".[dev]" floats API+SDK to the newest
# releases satisfying these floors on each CI run; green "test" proves the adapter against that pair.
# Integrators: pin opentelemetry-api and opentelemetry-sdk to matching versions in your app graph.
# Policy: docs/COMPATIBILITY.md §3.1, docs/SPEC_OPENTELEMETRY_DEPENDENCY_POLICY.md §1–§4 and §7.
dependencies = [
    "opentelemetry-api>=1.0.0",
    "opentelemetry-sdk>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "packaging>=23.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",
    "replayt>=0.4.25",
    "requests>=2.33.0",
    "twine>=5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
